<resources>
    <string name="app_name">SportBeat</string>
    <string name="tvLogo">SportBeat</string>
    <string name="nav_profile_title">Profile</string>
    <string name="nav_setting_title">Settings</string>
    <string name="nav_help_title">Help</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="tvRecord_main">Record</string>
    <string name="nav_logout_title">Logout</string>
    <string name="edit_text_username_hit">username</string>
    <string name="edit_text_password_hit">password</string>
    <string name="login_button_id">LOGIN WITH EMAIL</string>
    <string name="fb_login_button_id">LOGIN WITH FACEBOOK</string>
    <string name="register_button_id">Register Me.</string>
    <string name="cbLoginActivity">Remember me.</string>
    <string name="forgot_password_button">Forgot password?</string>
    <string name="edit_text_username_email_hit">e-mail</string>
    <string name="edit_text_RePassword_hit">Retype your password</string>
    <string name="register_button_register_activity">Sign up</string>
    <string name="userNameError">Enter a valid username!</string>
    <string name="tvBPM">BPM</string>
    <string name="tvKMH">Km/h</string>
    <string name="nav_login_title">Log in</string>
    <string name="already_logged_in">You are already logged in...</string>
    <string name="not_logged_in">You are not logged in...</string>
    <string name="pulse">Pulse</string>
    <string name="speed">Speed</string>
    <string name="tvTime">Time</string>
    <string name="tvMin">hh:mm:ss</string>
    <string name="pulseNA">N/A</string>

    <string name="facebook_app_id">246304895913197</string>
    <string name="fb_login_protocol_scheme">fb246304895913197</string>
    <string name="tv_lowest_value">Lowest pulse value:</string>
    <string name="tv_medium_value">Medium pulse value:</string>
    <string name="tv_highest_value">Highest pulse value:</string>
    <string name="btnSave">Save</string>
    <string name="fieldSizeQuestion">To calculate the size of the field move to the right corner of the opponent team and press OK.</string>
    <string name="btnOkPopup">OK</string>
    <string name="btnNoPopup">No thanks!</string>
    <string name="tv_lowest_speed">Lowest speed value:</string>
    <string name="tv_medium_speed">Medium speed value:</string>
    <string name="tv_highest_speed">Highest speed value:</string>
    <string name="btnCoordinates_show">my track</string>

    <string name="google_maps_API_key">AIzaSyCGj4kJKDtA1MqLWg9RwmXEl4sZZqUu84A</string>
    <string name="title_activity_maps">Map</string>
    <string name="help_text">This page was created to help you to understand how the application works by providing some informations about the concept on which the app is based and the technologies used in the development process.</string>
    <string name="question_mark_tv">The applications purpose is to offer
        its users the possibility to monitorize one of their most
        important health parameter in real time and to get informations
        about their speed during the game or cardio. Furthermore, the user
        is able to see in which part of the field he played most of the time,
        by selecting the court's dimensions from Settings before starting the
        record. All of these will help an amateur sportsman to progress and to keep
        an eye on his health level without needing a professional support.</string>
    <string name="arduino_tv">Both gps and pulse sensors are integrated on an Arduino Uno alike board, named WeMos D1-R2, which uses as a microcontroller, unlike Arduino, an ESP8266-WiFi module. The board will connect to the phone\'s hotspot whenever it detects it and will be worn as a chest belt while the pulse sensor will be placed on the user\'s ear lobe.</string>
    <string name="android_tv">The application is the user\'s way to communicate with the chest belt (board). Right after running it, the user will have to authentificate himself and only after this he will be able to start recording data. On the main activity, while or after recording, the user will be able to see bpm values displayed on a real-time graph. To access his records history, the users have to select Profile from apps menu. There he will have the possibility to visualize each record and to get more information about it. Furthermore, if he was recording a cardio activity (running or biking), he can see his route by selecting My Track button from Info Activity.</string>
</resources>
