<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<item android:id="@+id/nav_login"-->
        <!--android:icon="@mipmap/ic_person_outline_black_24dp"-->
        <!--android:title="@string/nav_login_title"/>-->
    <item android:id="@+id/nav_profile"
        android:icon="@mipmap/ic_person_outline_black_24dp"
        android:title="@string/nav_profile_title"/>
    <item android:id="@+id/nav_settings"
        android:icon="@mipmap/ic_settings_black_24dp"
        android:title="@string/nav_setting_title"/>
    <item android:id="@+id/nav_help"
        android:icon="@mipmap/ic_help_outline_black_24dp"
        android:title="@string/nav_help_title"/>
    <item android:id="@+id/nav_logout"
        android:icon="@mipmap/logout"
        android:title="@string/nav_logout_title"/>

</menu>