<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pulse"
                android:textSize="22dp"
                android:layout_marginRight="5dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvPulseListLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="120"
                android:textSize="22dp"
                 />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvBPM"
                android:textSize="22dp"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed"
                android:textSize="22dp"
                android:layout_marginRight="5dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvSpeedListLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15"
                android:textSize="22dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvKMH"
                android:textSize="22dp"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvTime"
            android:textSize="22dp"
            android:textStyle="bold"
            android:layout_marginRight="5dp"/>
        <TextView
            android:id="@+id/tvTimeListLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="45:00"
            android:textSize="22dp"
            android:layout_marginRight="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvMin"
            android:textSize="22dp"
            />

    </LinearLayout>


</LinearLayout>