<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ro.ase.angel.licenta1.RegisterActivity"
    android:orientation="vertical"
    android:padding="25dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="50dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_supervisor_account_white_48dp"
            android:layout_marginBottom="30dp"/>

        <EditText
            android:id="@+id/etUsername_register_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_username_email_hit"
            android:drawableLeft="@drawable/ic_action_user"
            android:inputType="textEmailAddress"
            />
        <EditText
            android:id="@+id/etPassword_register_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_password_hit"
            android:drawableLeft="@drawable/ic_action_pass"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/etRePassword_register_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_RePassword_hit"
            android:drawableLeft="@drawable/ic_action_pass"
            android:inputType="textPassword"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnRegister_register_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button_register_activity"
        android:textColor="@android:color/black"/>

</LinearLayout>
