<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ro.ase.angel.licenta1.HelpActivity"
    android:orientation="vertical"
    android:background="@drawable/mygradient"
    >
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_text"
            android:layout_gravity="center"
            android:gravity="center"/>

        <LinearLayout
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginLeft="20dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src = "@drawable/question_mark"/>

            <TextView
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_mark_tv"/>


        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginLeft="20dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src = "@drawable/arduino_img"/>

            <TextView
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arduino_tv"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginLeft="20dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src = "@drawable/android_vector"/>

            <TextView
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android_tv"/>

        </LinearLayout>



    </LinearLayout>
    </ScrollView>

</LinearLayout>
