<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ro.ase.angel.licenta1.LoginActivity"
    >


    <android.support.constraint.ConstraintLayout
        android:id="@+id/clayout_main_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="25dp">

        <ImageView
            android:id="@+id/imageViewLogin"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/user"
            android:layout_marginTop="10dp"
            />

        <LinearLayout
            android:layout_marginTop="170dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvError"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etUsername"
                android:hint="@string/edit_text_username_hit"
                android:textColorHint="@color/primaryThemeColor"
                android:textColor="@color/primaryThemeColor"
                android:ems="10"
                android:textSize="18dp"
                android:drawableLeft="@drawable/ic_action_user"
                android:background="@android:color/transparent"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etPassword"
                android:inputType="textPassword"
                android:hint="@string/edit_text_password_hit"
                android:textColorHint="@color/primaryThemeColor"
                android:textColor="@color/primaryThemeColor"
                android:ems="10"
                android:textSize="18dp"
                android:drawableLeft="@drawable/ic_action_pass"
                android:background="@android:color/transparent"
                android:layout_marginBottom="10dp"/>

            <Button
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:id="@+id/btnLogin"
                android:text="@string/login_button_id"/>

            <Button
                android:layout_marginTop="7dp"
                android:textColor="@android:color/black"
                android:id="@+id/btnRegister_login_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_button_id"
                android:layout_gravity="center"
                />
            <com.facebook.login.widget.LoginButton
                android:id="@+id/btnFbLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="0dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:weightSum="1"
                >

                <LinearLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="left"
                    android:layout_weight="0.5">
                    <CheckBox
                        android:id="@+id/cbLoginActivity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cbLoginActivity"
                        android:textColor="@color/primaryThemeColor"
                        android:textStyle="bold"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="8dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="right"
                    android:layout_weight="0.5">

                    <TextView

                        android:textColor="@color/primaryThemeColor"
                        android:id="@+id/tvForgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot_password_button"
                        android:textStyle="bold"/>

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

        </RelativeLayout>


    </android.support.constraint.ConstraintLayout>



</android.support.v4.widget.DrawerLayout>
